Stack footer columns on mobile [Issue #81]

--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -738,10 +738,17 @@ footer {
   footer .col {
     display: flex;
     justify-content: space-evenly; }
+    @media screen and (max-width: 959px) {
+      footer .col {
+        display: block;
+        text-align: center; } }
   footer .col-footer:first-of-type {
     color: #eeeeee;
     text-align: center;
     font-weight: 300; }
+  @media screen and (max-width: 959px) {
+    footer .col-footer {
+      margin-bottom: 20px; } }
   footer .copyright {
     font-size: 16px;
     margin-bottom: 2px; }
